assets/css/style.css
@import url('./materialize/css/materialize.min.css');
@import url('https://fonts.googleapis.com/css?family=Racing+Sans+One');

@font-face {
    font-family: "myfont";
    src: url('./fonts/heroes_legend/HeroesLegend.ttf');
}

.divSpacing {
    padding-bottom: 92px;
    padding-top: 50px;
}

h1, h2, h3 {
    font-family: 'Racing Sans One', cursive;
    margin-bottom: 0px;
    color: #7858af;
}

.description {
    color: rgb(105, 105, 105);
    font-style: italic;
    font-size: 15px;
}

.paragraph {
    text-align: justify;
    text-indent: 50px;
}

.bold {
    font-weight: bold; 
}

.leftDiv {
    margin-left: 15px;
}

/* Navigation Bar CSS */
nav {
    background-color: #7858af;
    font-family: 'Racing Sans One', cursive;
}

.brand-logo {
    font-size: 10px;
    margin-left: 6px;
}

/* Home Screen CSS */
#homeImage{
    width: 100%;
    height: 1000px;
    position: relative;
    z-index: 0;
    opacity: .6;
}

.nameDiv{
    z-index: 1;
    position: relative;
    top: -780px;
    color: aliceblue;
    font-family: "myfont";
    font-size: 30px;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.name {
    font-size: 100px;
    border-bottom: solid 2px;
    line-height: 1.4;
    margin-bottom: 20px;
    color: aliceblue;
    font-family: "myfont";
}

.interactive{
    margin-top: 0px;
}

.overlay {
    width: 100%;
    height: 1000px;
    background-color: #7858af;
    z-index: 2;
}

.topicDiv {
    border-bottom: solid 1px gray;
    margin-bottom: 15px;
}

.tanDiv {
    background-color: #f3efe1;
    margin-top: 30px;
}

/* Profile Section CSS */
.basicDiv {
    margin-left: 30px;
}

.basicText {
    margin-left: 30px;
}

.profilePic {
    height: 305px;
    width: 365px;
    margin-left: 6px;
    border: solid 10px #7858af7a;
}

.aboutMe {
    margin-left: 60px;
}

/* Experiences Section CSS */
.experienceTitle {
    font-weight: bolder;
    font-size: 20px; 
    color: black;

}

.experienceDate {
    font-size: 14px;
    font-style: italic;
    margin-top: -30px;
    margin-left: 38px;
}

.experienceLocation {
    font-size: 14px;
    font-style: italic;
    margin-top: -31px;
    margin-left: 38px;
}

.dateLogo {
    margin-top: 6px;
}

/* Contact Section CSS */
.contactDiv{
    z-index: 1;
    position: relative;
    bottom: 60%;
}

.contact{
    color: aliceblue;
}

#contactImage {
    width: 100%;
    height: 1000px;
    position: relative;
    z-index: 0;
    opacity: .3;
}

